[package]
    authors     = ["Riven Skaye <riven@tae.moe>"]
    categories  = ["api-bindings", "os::windows-apis"]
    description = "Extensions to windows-rs that serve to provide the macros and header-only functions from the Windows SDK"
    edition     = "2021"
    homepage    = "https://github.com/RivenSkaye/windows-rs-ext"
    keywords    = ["windows", "windows-extensions", "windows-rs"]
    license     = "MIT OR Apache-2.0"
    name        = "windows-ext"
    repository  = "https://github.com/RivenSkaye/windows-rs-ext"
    version     = "0.0.2"

[dependencies]
    windows = {version = "0.54"}

[features]
    default   = ["ext-impls", "minwindef"]
    ext-impls = []
    minwindef = []
